--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.7",
     "socket.io": "^4.4.1"
   }
 }
