--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "fs": "^0.0.1-security",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.7",
-    "socket.io": "^4.4.1"
+    "nodemon": "^2.0.15",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1"
   }
 }
